--- a/config/network/localhost/manifest.json
+++ b/config/network/localhost/manifest.json
@@ -1,8 +1,8 @@
 {
     "serverAddress": "localhost",
-    "serverName": "Node Y56 Intranet",
-    "iconName": "Moon-icon.png",
-    "terminalID": "Y56",
+    "serverName": "Royal",
+    "iconName": "delta-green.png",
+    "terminalID": "t",
     "defaultUser": {
         "userId": "user",
         "password": "",
